# Falcor

./: .gitignore  .gitmodules  CMakeLists.txt  Demo_vs2022.bat  Demo_vscode.bat  README.md  readme.txt
Source/Mogwai/Data/: ExampleBlitPass.py  PathTracerSplitScreenDebug.py  TestRaytracing.py  TinyPathTracer.py  Wireframe.py
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/CustomPathTracer/: CMakeLists.txt  CustomPathTracer.cpp  CustomPathTracer.h  CustomPathTracer.rt.slang
Source/RenderPasses/OptixDenoiser/: OptixDenoiser.cpp  OptixDenoiser.h
Source/RenderPasses/SimpleCopyPass/: CMakeLists.txt  SimpleCopyPass.cpp  SimpleCopyPass.h
Source/RenderPasses/wireframe/: CMakeLists.txt  Wireframe.3d.slang  wireframe.cpp  wireframe.h
tools/: make_new_custom_render_pass.bat  make_new_custom_render_pass.py  make_new_render_pass_library.py
