add_subdirectory(AccumulatePass)
add_subdirectory(BlitPass)
add_subdirectory(BSDFOptimizer)
add_subdirectory(BSDFViewer)
add_subdirectory(DebugPasses)
add_subdirectory(DLSSPass)
add_subdirectory(Falcor-playground)
add_subdirectory(GBuffer)
add_subdirectory(MinimalPathTracer)
add_subdirectory(ModulateIllumination)
add_subdirectory(NRDPass)
add_subdirectory(PathTracer)
add_subdirectory(ToneMapper)
add_subdirectory(Utils)
add_subdirectory(WARDiffPathTracer)
add_subdirectory(WhittedRayTracer)
